change react select max height to display 4.5 items (fix for overflowing new form modal)

--- a/jsapp/scss/components/_kobo.bem.ui.scss
+++ b/jsapp/scss/components/_kobo.bem.ui.scss
@@ -497,7 +497,7 @@ iframe {
   }
 
   &--metadata-share {
-    padding-top: 20px;
+    padding-top: 15px;
     clear: both;
 
     input[type="checkbox"] {
