--- a/jsapp/scss/components/_kobo.modal.scss
+++ b/jsapp/scss/components/_kobo.modal.scss
@@ -118,7 +118,7 @@
 }
 
 .modal__footer {
-  margin-top: 40px;
+  margin-top: 20px;
   overflow: hidden; // clearfix
   text-align: right;
 
